--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+		<link rel="stylesheet" href="index.css">
 	</head>
 
 	<body>
-		<h1>Just static file</h1>
+		<h1>This is pure bash http server</h1>
 	</body>
 </html>
