--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" href="favicon.ico">
 
 		<link rel="stylesheet" href="index.css">
 	</head>
